desing: FE: fix wrong position of cookies bar in safari

--- a/project-base/src/SS6/ShopBundle/Resources/styles/front/common/layout/layout.less
+++ b/project-base/src/SS6/ShopBundle/Resources/styles/front/common/layout/layout.less
@@ -28,14 +28,14 @@ img {
 
 	&__footer {
 		flex: 0;
-		will-change: margin;
+		will-change: padding;
 
 		background: @web-footer-background;
-		transition: @transition margin;
+		transition: @transition padding;
 
 
 		&--with-cookies {
-			margin-bottom: @web-footer-with-cookies-margin-bottom;
+			padding-bottom: @web-footer-with-cookies-margin-bottom;
 		}
 	}
 
